--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scrim-s04r19b",
-  "description": "https://v2.scrimba.com/learn-react-router-6-c06/~01c",
+  "name": "Scrim-s05u8cj",
+  "description": "https://v2.scrimba.com/learn-react-router-6-c06/~025",
   "scripts": {
     "start": "vite",
     "dev": "vite",
